Latest deploy - Fixes white space bottom

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
 .App-header {
   background-color: #282c34;
   background-image: url(./images/star_wars_bg.jpg);
-  background-repeat: no-repeat;
+  background-repeat:repeat;
   background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
@@ -113,6 +113,8 @@
 
 // ****************** MATERIAL UI TIMELINE **********************
 .timeline-container {
+  top: 0px;
+  padding-top:200px;
   left:0px;
   width:50vw;
   position: relative;
@@ -143,7 +145,7 @@
     
     @keyframes move{
       0% {
-    		top: 200px;
+    		top: 0px;
     	}
     	100% {
     		top: -1800px;
@@ -153,7 +155,7 @@
 
     @-webkit-keyframes move {
     	0% {
-    		top: 200px;
+    		top: 0px;
     	}
     	100% {
     		top: -1800px;
@@ -170,8 +172,9 @@
   @media (max-width: 1000px) {
     order: 2;
     width: 100vw;
-    top: 200px;
-
+    padding-top:180px;
+   // background-attachment: fixed;
+   // background-size: cover;
   }   
   
 }
